PAY-103 Hack to fix a body right gap.

--- a/public/app/styles/forms.less
+++ b/public/app/styles/forms.less
@@ -142,7 +142,7 @@ input[type="color"]:focus,
   border-radius: 0;
   color: #0066ca;
   
-  &[disabled] {
+  &[disabled], &[disabled]:active {
     cursor: inherit;
     color: #0066ca;
   }
